--- a/PaymentService/PaymentService.Service/PaymentService.Service.csproj
+++ b/PaymentService/PaymentService.Service/PaymentService.Service.csproj
@@ -23,4 +23,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\Request\Customer\" />
+  </ItemGroup>
+
 </Project>
